# flowhmm

./: .gitignore  LICENSE  README.md  main.py  main2d.py  mainNd.py  mainNd_Gosh.py  pyproject.toml
conda/: conda.yml
data/: DowJones_diff.csv  README.md  SP500.csv  info.md
data/amerigeoss/: pres_diff.csv
examples/: AmeriGEOSS_diff_1D.yaml  AmeriGEOSS_diff_6D.yaml  DowJones_diff.yaml  DowJones_diff_L2.yaml  DowJones_diff_L3.yaml  DowJones_diff_L4.yaml  PRES_diff_L2.yaml  PRES_diff_L3.yaml  PRES_diff_L4.yaml  SP500_diff.yaml  SP500_diff_L2.yaml  SP500_diff_L3.yaml  SP500_diff_L4.yaml  SYNTHETIC_1B_1U_1G.yaml  SYNTHETIC_1B_1U_1G_v2.yaml  SYNTHETIC_2G_1U.yaml  SYNTHETIC_2d_data_1G_1U_1GeomBrownianMotion.yaml  SYNTHETIC_2d_data_1G_1U_1GeomBrownianMotion_A2.yaml  SYNTHETIC_2d_data_1G_1U_1GeomBrownianMotion_v2_A1.yaml  SYNTHETIC_2d_data_1G_1U_1GeomBrownianMotion_v2_A2.yaml  SYNTHETIC_2d_data_1U_2Moons.yaml  SYNTHETIC_2d_data_1U_2Moons_A2.yaml  SYNTHETIC_2d_data_2G_1U.yaml  WIND_5D_L2_diff.yaml  WIND_5D_L2_diff_v2.yaml  WIND_5D_L3_diff.yaml  WIND_5D_L3_diff_v2.yaml  WIND_5D_L4.yaml  WIND_5D_L4_diff.yaml  WIND_5D_L4_diff_v2.yaml
flowhmm/: main.py  main2d.py  main2dGhosh.py  mainNd.py  mainNd_Gosh.py  utils.py  visualise.py
flowhmm/CNF_lib/: multiscale_parallel.py  odenvp.py  spectral_norm.py  visualize_flow.py
ghosh/: genHMM.py  genHMM_GLOW.py  glow_model.py  glow_modules.py  plot_functions.py  realnvp.py  ref_hmm.py  utils.py
legacy/: main2d.py
notes/: bivariate_normal.mw
polyaxonfiles/: train2d.yaml
src/: hmm_flow_continuous.py  utils.py
src/ghosh/: ops.py  (+11 more)
(+35 files in other folders)
